# discord-downloader-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  bot.py  config.py  docker-compose.yml  pyproject.toml  queue_client.py  requirements-dev.txt  requirements.txt
cogs/: download.py  owner.py  setup.py
db/: guild_settings.py  pool.py
downloader_bot/: bot.py  config.py  presence.py  queue_client.py
downloader_bot/cogs/: download.py  general.py  setup.py
downloader_bot/db/: guild_settings.py  pool.py  schema.sql
downloader_bot/storage/: __init__.py  azure.py  base.py  container.py  exceptions.py
downloader_bot/worker/: delivery.py  discord_rest.py  jobs.py  main.py  zip_stream.py
scripts/: start.sh
storage/: container.py  exceptions.py  util.py
tests/: conftest.py  test_bot_error_handler.py  test_presence.py
tests/cogs/: conftest.py  test_download.py
tests/db/: test_guild_settings.py
tests/storage/: test_azure.py  test_container.py  test_factory.py
tests/worker/: conftest.py  test_delivery.py  test_jobs.py  test_main.py  test_zip_stream.py
worker/: delivery.py  jobs.py  main.py
